dense_flow/local/errors.log
  File "build_of.py", line 29
    print '{} done'.format(vid_name)
                  ^
SyntaxError: invalid syntax
